// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDiscountCode/> should not render when the popover is closed 1`] = `
<body>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
    id="toolbar-button-1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      <i
        class="material-icons icon"
      >
        discount
      </i>
    </span>
  </button>
</body>
`;

exports[`<AddDiscountCode/> should render the discount picker when the popover is clicked and only one integration 1`] = `
<body>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
    id="toolbar-button-2"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      <i
        class="material-icons icon"
      >
        discount
      </i>
    </span>
  </button>
  <div>
    <div
      class="popover fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="discountLineContainer"
          >
            <div
              class="input-icon input-icon-left searchInput"
            >
              <i
                class="icon material-icons md-2"
              >
                search
              </i>
              <input
                class="form-control"
                placeholder="Search discount codes"
                type="text"
                value=""
              />
            </div>
            <div
              class="headerResult"
            >
              <div
                class="backContainer"
              />
              <div>
                <span
                  class="headerText"
                >
                  shopify-store
                </span>
              </div>
              <div
                class="itemCount"
              >
                <span
                  class="resultTotal"
                >
                  0
                   Discounts
                </span>
              </div>
            </div>
            <div
              class="listGroupContainer"
            >
              <div
                style="padding: 8px;"
              >
                <div
                  class="alert error"
                >
                  <div
                    class="content"
                  >
                    <span
                      class="label"
                    >
                      Missing Shopify permissions. To use this new feature, please go to the
                       
                      <a
                        to="/app/settings/integrations/shopify/8"
                      >
                        settings page of your Shopify integration 
                      </a>
                      and click on "Update App Permissions".
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`<AddDiscountCode/> should render the discount picker when there is a current shopify integration 1`] = `
<body>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
    id="toolbar-button-3"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      <i
        class="material-icons icon"
      >
        discount
      </i>
    </span>
  </button>
  <div>
    <div
      class="popover fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="discountLineContainer"
          >
            <ul
              class="list-group list-group-flush"
            >
              <button
                class="customListGroup list-group-item-action list-group-item"
              >
                <div
                  class="integrationRowContainer"
                >
                  <div
                    class="integrationRow"
                  >
                    <img
                      alt="Logo"
                      class="shopifyLogo"
                      src="/assets/img/integrations/shopify.png"
                    />
                    <span>
                      shopify-store
                    </span>
                  </div>
                  <i
                    class="material-icons arrowIcon"
                  >
                    keyboard_arrow_right
                  </i>
                </div>
              </button>
              <button
                class="customListGroup list-group-item-action list-group-item"
              >
                <div
                  class="integrationRowContainer"
                >
                  <div
                    class="integrationRow"
                  >
                    <img
                      alt="Logo"
                      class="shopifyLogo"
                      src="/assets/img/integrations/shopify.png"
                    />
                    <span>
                      shopify-store
                    </span>
                  </div>
                  <i
                    class="material-icons arrowIcon"
                  >
                    keyboard_arrow_right
                  </i>
                </div>
              </button>
            </ul>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`<AddDiscountCode/> should render the store picker because of multiple integrations 1`] = `
<body>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
    id="toolbar-button-4"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      <i
        class="material-icons icon"
      >
        discount
      </i>
    </span>
  </button>
  <div>
    <div
      class="popover fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="discountLineContainer"
          >
            <ul
              class="list-group list-group-flush"
            >
              <button
                class="customListGroup list-group-item-action list-group-item"
              >
                <div
                  class="integrationRowContainer"
                >
                  <div
                    class="integrationRow"
                  >
                    <img
                      alt="Logo"
                      class="shopifyLogo"
                      src="/assets/img/integrations/shopify.png"
                    />
                    <span>
                      shopify-store
                    </span>
                  </div>
                  <i
                    class="material-icons arrowIcon"
                  >
                    keyboard_arrow_right
                  </i>
                </div>
              </button>
              <button
                class="customListGroup list-group-item-action list-group-item"
              >
                <div
                  class="integrationRowContainer"
                >
                  <div
                    class="integrationRow"
                  >
                    <img
                      alt="Logo"
                      class="shopifyLogo"
                      src="/assets/img/integrations/shopify.png"
                    />
                    <span>
                      shopify-store
                    </span>
                  </div>
                  <i
                    class="material-icons arrowIcon"
                  >
                    keyboard_arrow_right
                  </i>
                </div>
              </button>
            </ul>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>
</body>
`;
